fixed grid layout on small screen styles

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -111,18 +111,18 @@
   }
 
   &__img-box-2 {
-    grid-row: 8 / span 6;
+    grid-row: 9 / span 6;
     grid-column: 1 / span 2;
   }
 
   &__img-box-3 {
     grid-column: 3 / span 2;
-    grid-row: 15 / span 6;
+    grid-row: 17 / span 6;
   }
 
   &__img-box-4 {
     grid-column: 1 / -1;
-    grid-row: 21 / span 4;
+    grid-row: 23 / span 4;
   }
 
   &__img {
@@ -140,20 +140,20 @@
 
   &__description-1 {
     grid-column: 1 / -1;
-    grid-row: 4 / span 4;
+    grid-row: 4 / span 5;
   }
 
   &__description-2 {
     // grid-row: 5;
     // grid-column: 3 / -1;
-    grid-row: 8 / span 7;
+    grid-row: 9 / span 8;
     grid-column: 3 / span 2;
   }
 
   &__description-3 {
     // grid-column: 1 / -1;
     // grid-row: 6 / span 1;
-    grid-row: 14 / span 7;
+    grid-row: 15 / span 8;
     grid-column: 1 / span 2;
   }
 
